# memory-bank

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
skills/memory-bank-dev/: SKILL.md
skills/memory-bank-dev/references/: architecture.md
src/mb/: artifact_chunker.py  budgeter.py  chunker.py  claude_adapter.py  cli.py  decay.py  graph.py  hook_handler.py  hooks.py  importer.py  migrations.py  models.py  ollama_client.py  pack.py  pack_modes.py  pipeline.py  pty_runner.py  redactor.py  registry.py  renderers.py  reranker.py  retriever.py  sanitizer.py  search.py  session_start_hook.py  state.py  storage.py  store.py
tests/: conftest.py
tests/integration/: test_cli_integration.py
tests/unit/: test_artifact_chunker.py  test_artifact_import.py  test_artifact_models.py  test_budgeter.py  test_chunker.py  test_claude_adapter.py  test_cli.py  test_contextual_retriever.py  test_decay.py  test_dedup.py  test_global_search.py  test_graph.py  test_hook_handler.py  test_hooks.py  test_importer.py  test_migrations.py  test_models.py  test_ollama_client.py  test_pack.py  test_pack_artifacts.py  test_pack_modes.py  test_pipeline.py  test_redactor.py  test_registry.py  test_renderers.py  test_reranker.py  test_retriever.py  test_sanitizer_ansi.py  test_sanitizer_noise.py  test_search_decay.py  test_search_mmap.py  test_search_type_filter.py  test_session_start_hook.py  test_state_sampling.py  test_storage.py  test_store.py
