[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-bank"
version = "0.1.0"
description = "CLI tool that wraps LLM CLIs via PTY, captures sessions, and enables semantic search and context pack generation"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [{name = "Alexli18"}]
keywords = ["llm", "cli", "memory", "context", "search", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/Alexli18/memory-bank"
Repository = "https://github.com/Alexli18/memory-bank"
Issues = "https://github.com/Alexli18/memory-bank/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy>=1.8",
]

[project.scripts]
mb = "mb.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests requiring external services"]
